--- a/client/app/arena/arena.jade
+++ b/client/app/arena/arena.jade
@@ -1,2 +1,7 @@
-.col-md-12
-    | This is the arena view.
+.container
+  .col-md-12
+      | This is the arena view.
+  .row
+    {{my_play}}
+  .row
+    {{your_play}}
