--- a/client/app/arena/arena.jade
+++ b/client/app/arena/arena.jade
@@ -4,15 +4,21 @@
   .row
     .col-md-6
       h1 My Play
-      img(ng-show="my_play == 'rock'", src="img/rock.png")
-      img(ng-show="my_play == 'paper'", src="img/paper.png")
-      img(ng-show="my_play == 'scissors'", src="img/scissors.png")
+      img(ng-show="my_play == 'rock'", src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/rock.png")
+      img(ng-show="my_play == 'paper'", src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/paper.png")
+      img(ng-show="my_play == 'scissors'", src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/scissors.png")
+      //-img(ng-show="my_play == 'rock'", src="img/rock.png")
+      //-img(ng-show="my_play == 'paper'", src="img/paper.png")
+      //-img(ng-show="my_play == 'scissors'", src="img/scissors.png")
       {{my_play}}
     .col-md-6
       h1 Opponent Play
-      img(ng-show="your_play == 'rock'", src="img/rock.png")
-      img(ng-show="your_play == 'paper'", src="img/paper.png")
-      img(ng-show="your_play == 'scissors'", src="img/scissors.png")
+      img(ng-show="your_play == 'rock'", src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/rock.png")
+      img(ng-show="your_play == 'paper'", src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/paper.png")
+      img(ng-show="your_play == 'scissors'", src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/scissors.png")
+      //-img(ng-show="your_play == 'rock'", src="img/rock.png")
+      //-img(ng-show="your_play == 'paper'", src="img/paper.png")
+      //-img(ng-show="your_play == 'scissors'", src="img/scissors.png")
       {{your_play}}
    .row
     h1(ng-show="winner == 'player'",style="text-align: center") You win!
