--- a/client/app/arena/arena.jade
+++ b/client/app/arena/arena.jade
@@ -1,6 +1,5 @@
+div(ng-include='"components/navbar/navbar.html"')
 .container
-  .col-md-12
-      | This is the arena view.
   .row
     .col-md-6
       h1 My Play
