--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -1,33 +1,56 @@
 div(ng-include='"components/navbar/navbar.html"')
 
-header#banner.hero-unit
-  .container
-    h1 'Allo, 'Allo!
-    p.lead Kick-start your next web app with Angular Fullstack
-    img(src='assets/images/yeoman.png', alt='I\'m Yeoman')
+.jtron
+  h1 Virtual Rock Paper Scissors
+  p Works best when used with a Thalmic Myo.
+  img(src="img/rock-trans.png")
+  img(src="img/paper-trans.png")
+  img(src="img/scissors-trans.png")
+  br
+  br
+  button.btn.btn-default(ng-click="play()") Let's Play!
 
-.container
-  .row
-    .col-lg-12
-      h1.page-header Features:
-      ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
-        li
-          a(href='#', tooltip='{{thing.info}}')
-            | {{thing.name}}
-            button.close(type='button', ng-click='deleteThing(thing)') ×
+.footer
+  a(href="https://github.com/dmdque/rpsOnline")
+    i.fa.fa-github.fa-2x
+    | &nbsp
+    h4(style="display: inline;") View on Github
+    br
+    br
+  a(href="http://youtu.be/4-c7qIWKohw?t=4m00s")
+    i.fa.fa-youtube.fa-2x
+    | &nbsp
+    h4(style="display: inline;") Watch demo with Thalmic Myo 
 
-  form.thing-form
-    label Syncs in realtime across clients
-    p.input-group
-      input.form-control(type='text', placeholder='Add a new thing here.', ng-model='newThing')
-      span.input-group-btn
-        button.btn.btn-primary(type='submit', ng-click='addThing()') Add New
 
-footer.footer
-  .container
-    p
-      | Angular Fullstack v2.0.13
-      = ' | '
-      a(href='https://twitter.com/tyhenkel') @tyhenkel
-      = ' | '
-      a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
+//-header#banner.hero-unit
+  //-.container
+    //-h1 'Allo, 'Allo!
+    //-p.lead Kick-start your next web app with Angular Fullstack
+    //-img(src='assets/images/yeoman.png', alt='I\'m Yeoman')
+
+//-.container
+  //-.row
+    //-.col-lg-12
+      //-h1.page-header Features:
+      //-ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
+        //-li
+          //-a(href='#', tooltip='{{thing.info}}')
+            //-| {{thing.name}}
+            //-button.close(type='button', ng-click='deleteThing(thing)') ×
+
+  //-form.thing-form
+    //-label Syncs in realtime across clients
+    //-p.input-group
+      //-input.form-control(type='text', placeholder='Add a new thing here.', ng-model='newThing')
+      //-span.input-group-btn
+        //-button.btn.btn-primary(type='submit', ng-click='addThing()') Add New
+
+//-footer.footer
+  //-.container
+    //-p
+      //-| Angular Fullstack v2.0.13
+      //-= ' | '
+      //-a(href='https://twitter.com/tyhenkel') @tyhenkel
+      //-= ' | '
+      //-a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
