--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,10 +1,10 @@
 .thing-form {
-  margin: 20px 0;
+  /*margin: 20px 0;*/
 }
 
 #banner {
     border-bottom: none;
-    margin-top: -20px;
+    /*margin-top: -20px;*/
 }
 
 #banner h1 {
@@ -25,6 +25,24 @@
 .footer {
     text-align: center;
     padding: 30px 0;
-    margin-top: 70px;
+    /*margin-top: 30px;*/
     border-top: 1px solid #E5E5E5;
+}
+
+.jtron {
+  background: -webkit-radial-gradient(#eeeee7, #57b2b3); /* Safari 5.1 to 6.0 */
+  background: -o-radial-gradient(#eeeee7, #57b2b3); /* For Opera 11.6 to 12.0 */
+  background: -moz-radial-gradient(#eeeee7, #57b2b3); /* For Firefox 3.6 to 15 */
+  background: radial-gradient(#eeeee7, #57b2b3); /* Standard syntax */
+  /*background: -webkit-radial-gradient(#a5a5e7, #5d5ddb); [> Safari 5.1 to 6.0 <]*/
+  /*background: -o-radial-gradient(#a5a5e7, #5d5ddb); [> For Opera 11.6 to 12.0 <]*/
+  /*background: -moz-radial-gradient(#a5a5e7, #5d5ddb); [> For Firefox 3.6 to 15 <]*/
+  /*background: radial-gradient(#a5a5e7, #5d5ddb); [> Standard syntax <]*/
+  text-align: center;
+  color: black;
+  padding: 200px 0 200px 0;
+}
+
+a {
+  color: #37989c;
 }
