temp fix for images on heroku

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -3,9 +3,9 @@ div(ng-include='"components/navbar/navbar.html"')
 .jtron
   h1 Virtual Rock Paper Scissors
   p Works best when used with a Thalmic Myo.
-  img(src="img/rock-trans.png")
-  img(src="img/paper-trans.png")
-  img(src="img/scissors-trans.png")
+  img(src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/rock-trans.png")
+  img(src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/paper-trans.png")
+  img(src="https://raw.githubusercontent.com/dmdque/rpsOnline/master/public/img/scissors-trans.png")
   br
   br
   button.btn.btn-default(ng-click="play()") Let's Play!
